@@ -73,6 +73,12 @@ index_mstop=Stop mail server
 index_mrestart=Restart mail server
 index_mstopdesc=The configured mail server is currently active, and accepting email for virtual domain mailboxes. Click this button to stop it.
 index_mname=$1 Mail Server
+index_dname=Dovecot IMAP/POP3 Server
+index_dstop=Stop Dovecot server
+index_dstart=Start Dovecot server
+index_drestart=Restart Dovecot Server
+index_dstopdesc=The Dovecot IMAP and POP3 server is currently active, and accepting connections for virtual domain mailboxes. Click this button to stop it.
+index_dstartdesc=The Dovecot IMAP and POP3 server is currently down, which will prevent virtual domain mailboxes from downloading email. Click this button to start it.
 index_fname=ProFTPd FTP Server
 index_fstop=Stop ProFTPd
 index_frestart=Restart ProFTPd
